configuration/argocd/argocd-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: argocd
  name: argocd-lb
  namespace: argocd
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
